--- a/index.html
+++ b/index.html
@@ -8,46 +8,83 @@
 	<title>XP Investimentos: transformando o mercado financeiro</title>
 </head>
 <body>
-	<!-- Espaço Reservado para o Menu-->
 	<header>
 		<nav>
-			<img class="logo" src="img/logo-xpi.png" alt="Logo da XP Investimentos" height="50px" width="50px">
-			<ul class="list-menu">
-				<li>SOBRE A XP</li>
-				<li>COMECE A INVESTIR</li>
-				<li>INVESTIMENTOS</li>
-				<li>CONTEÚDOS</li>
-				<li>ATENDIMENTO</li>
-				<li>EMPRESAS</li>
-			</ul>
-			<div class="responsive">
-				<button type="button" class="button-menu">ABRA SUA CONTA</button>
-				<a class="acesso-menu">Acesse sua conta</a>
+			<div class="container-menu">
+				<div class="logo-menu">
+					<img src="img/logo-xp-branco.png" alt="Logo da XP Investimentos" height="70vh"  width="60vw">
+				</div>
+				<div class="menu">
+					<ul class="menu-site-normal">
+						<li>SOBRE A XP</li>
+						<li>COMECE A INVESTIR</li>
+						<li>INVESTIMENTOS</li>
+						<li>CONTEÚDOS</li>
+						<li>ATENDIMENTO</li>
+						<li>EMPRESAS</li>
+					</ul>
+				</div>
+				<div class="interacao-usuario">
+					<button type="button" class="abra-sua-conta">ABRA SUA CONTA</button>
+					<a class="acesse-sua-conta">Acesse sua conta</a>
+					<div class="menu-mobile">
+						<div class="line-1"></div>
+						<div class="line-2"></div>
+						<div class="line-3"></div>
+					</div>
+				</div>
 			</div>
 		</nav>
 	</header>
 	<main>
-		<div class="grid-on-1">
-			<div>
-				<h1 class="titulo cut-screen-menu">CDB 200% do CDI voltou</h1>
-				<h2 class="subtitulo cut-screen-menu">Abra sua conta e invista no CDB Banco XP com liquidez diária</h2>
+		<div class="container-body">
+			<div class="grid-on-1">
+				<div>
+					<h1>CDB 200% do CDI voltou</h1>
+				</div>
+				<div>
+					<h2>Abra sua conta e invista no CDB Banco XP com liquidez diária</h2>
+				</div>
+				<div>
+					<button>ABRA SUA CONTA</button>
+				</div>
+				<div>
+					<p>
+						CDB BANCO XP S.A. - MAR/2022 Pós-Fixado 200% a.a. no vencimento.
+						Exclusivo para novos clientes até 31/03/2022 às 15h. Consulte 
+						todas as condições <span class="link-clique">clicando aqui.</span>
+					</p>
+				</div>
 			</div>
-			<div>
-				<button type="button-menu" class="button-body">ABRA SUA CONTA</button>
-				<p class="contexto">CDB BANCO XP S.A. - MAR/2022 Pós-Fixado 200% a.a. no vencimento. Exclusivo para novos clientes até 31/03/2022 às 15h. Consulte todas as condições <a class="condicoes">clicando aqui</a></p>
+			<div class="grid-on-2">
+				<div class="primeiro-quadro">
+					<div>
+						<img src="img/cards-desk-Simulador.jpg" height="110px" width="110px">
+					</div>
+					<div>
+						<p>
+							Descubra grátis quanto seu dinheiro pode render na XP
+						</p>
+						<p class="nota">
+							Simule agora
+						</p>
+					</div>
+				</div>
+				<div class="segundo-quadro">
+					<div>
+						<img src="img/75-x-103-copiar-2.jpg" height="110px">
+					</div>
+					<div>
+						<p>
+							Conheça os principais benefícios em ser cliente XP
+						</p>
+						<p class="nota">
+							Confira
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="grid-on-2">
-			<div class="simulator-xp">
-				<img src="img/cards-desk-Simulador.jpg" height="100%" width="25%">
-				<h1>Descubra grátis quanto seu dinheiro pode render na XP</h1>
-				<h2>Simule agora</h2>
-			</div>
-			<div class="benefits-xp">
-				<img src="img/75-x-103-copiar-2.jpg" height="100%" width="25%">
-				<h1>Conheça os principais benefícios em ser cliente XP</h1>
-				<h2>Confira</h2>
-			</div>
 		</div>
 	</main>
 </body>
